--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html><!-- Last Published: Wed Jun 11 2025 15:53:12 GMT+0000 (Coordinated Universal Time) --><html data-wf-domain="www.artdem.pro"  lang="en"><head><meta charset="utf-8"/><title>Privacy Policy</title><meta content="Privacy Policy" property="og:title"/><meta content="Privacy Policy" property="twitter:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><meta content="noindex" name="robots"/><link href="https://cdn.prod.website-files.com/6831cb19fc5bf3dae98e370a/css/advertigo-subscription.webflow.shared.f355380d4.min.css" rel="stylesheet" type="text/css"/><link href="https://cdn.prod.website-files.com/6831cb19fc5bf3dae98e370a/css/advertigo-subscription.webflow.6839724176bfc1624e58cd32-fb330dca2.min.css" rel="stylesheet" type="text/css"/><link href="https://fonts.googleapis.com" rel="preconnect"/><link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous"/><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Poppins:200italic,300,regular"]  }});</script><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script><link href="icon.svg" rel="shortcut icon" type="image/x-icon"/><link href="icon.svg" rel="apple-touch-icon"/><link href="privacy-policy.html" rel="canonical"/>
 <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/2.10.1/styles/overlayscrollbars.min.css" rel="stylesheet" />
 
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MB5TDRF6');</script>
+<!-- End Google Tag Manager -->
 
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MB5TDRF6"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.20/dist/lenis.css">
 
